[package]
name = "rust-study"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
toml-parse = "0.2.11"
# tokio =  "0.2"
# jsonpath_lib = "0.2.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

async-std = "1.6.5"
# for http-client
isahc = "0.9"

tokio = { version = "0.2", features = ["full"] }
#[dependencies.rest_client]
#git = "https://github.com/gtolle/rest_client"
