[package]
name = "rust-study"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.8.0"

ws = { git = "https://github.com/housleyjk/ws-rs.git" }

toml = "0.5"
toml-parse = "0.2.11"
# tokio =  "0.2"
# jsonpath_lib = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1.0"
# serde_yaml = "0.8"

async-std = "1.6.5"
# for http-client
isahc = "0.9"
# singleton
once_cell = "1.4"

# url
url = "2.1.1"
base64-url = "1.4.7"
urlencoding = "1.1.1"

tokio = { version = "0.2", features = ["full"] }

