[package]
name = "rust-study"
version = "0.1.0"
authors = ["whr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "0.8.0"

ws = { git = "https://github.com/housleyjk/ws-rs.git" }
env_logger = "0.7.1"

toml = "0.5"
toml-parse = "0.2.11"
# tokio =  "0.2"
# jsonpath_lib = "0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1.0"
# serde_yaml = "0.8"

async-std = "1.8.0"
# for http-client
isahc = "0.9"
# singleton
once_cell = "1.4"

# url
url = "2.1.1"
base64-url = "1.4.7"
urlencoding = "1.1.1"

tokio = { version = "1.0", features = ["full"] }

#cache
cache = "0.2.0"
cached = "0.19.0"

time = "0.2.22"

iron = "0.6.1"

#yaml = "0.3.0"
yaml-rust = "0.4.4"
serde_yaml = "0.8.14"

# regex express
regex = "1.4.2"
# lazy
lazy_static = "1.4.0"
# redis
redisclient = "*"
redis_rs = "0.9"

# dead-pool
deadpool = "0.7.0"

# rabbit mq
# amiquip = {version = "0.4", default-features = false,git = "https://github.com/jgallagher/amiquip.git"  }
#ws = { git = "https://github.com/housleyjk/ws-rs.git" }